payment form footer alignment fix

--- a/app/assets/stylesheets/payment_form.css
+++ b/app/assets/stylesheets/payment_form.css
@@ -254,7 +254,7 @@
 
 @media screen and (max-width: 767px){
   .pw-footer .w-sm{
-    width: 50%;
+    width: 45%;
     float: left;
   }
 }
